--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
     livestreaming:
-      image: livestreaming
+      image: tob-api
       build:
         context: .
         dockerfile: ./Dockerfile
